tests/ui/g-project-role-out-of-range.stderr
error[E0080]: evaluation panicked: role index must be < 16
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_display(&$arg);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<16, hibana::g::Send<0, 1, hibana::g::Msg<1, ()>>>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", ROLE_INDEX_ERROR);
  |             ------------------------------ in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |       let image = const {
  |  _________________^
  | |         if ROLE >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     };
  | |_____^

note: the above error was encountered while instantiating `fn g::project::<16, hibana::g::Send<0, 1, Msg<1, ()>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
